feat: понижена версия Java до 17, улучшена обработка событий Redis и добавлены проверки на null в SQL-провайдере.